public_html/layout/nouveau/style.css
/* ... */
#doc,#doc2,#doc3,#doc4,.yui-t1,.yui-t2,.yui-t3,.yui-t4,.yui-t5,.yui-t6,.yui-t7 {
text-align:left;
width:56.25em;
min-width:750px;
margin:auto;
}

#doc2 {
width:71.25em;
}

#doc3 {
width:auto;
margin:auto 10px;
}

#doc4 {
width:73.050003em;
}

.yui-b {
position:relative;
_position:static;
}

#yui-main .yui-b {
position:static;
float:none;
width:auto;
}

.yui-t1 #yui-main,.yui-t2 #yui-main,.yui-t3 #yui-main {
float:right;
margin-left:-25em;
}

.yui-t4 #yui-main,.yui-t5 #yui-main,.yui-t6 #yui-main {
float:left;
margin-right:-25em;
}

.yui-t1 .yui-b {
float:left;
width:12em;
}

.yui-t1 #yui-main .yui-b {
margin-left:13.05em;
}

.yui-t2 .yui-b {
float:left;
width:13.5em;
}

.yui-t2 #yui-main .yui-b {
margin-left:14.55em;
}

.yui-t3 .yui-b {
float:left;
width:22.5em;
}

.yui-t3 #yui-main .yui-b {
margin-left:23.620001em;
}

.yui-t4 .yui-b {
float:right;
width:13.5em;
}

.yui-t4 #yui-main .yui-b {
margin-right:14.55em;
}

.yui-t5 .yui-b {
float:right;
width:18em;
}

.yui-t5 #yui-main .yui-b {
margin-right:19.125em;
}

.yui-t6 .yui-b {
float:right;
width:22.5em;
}

.yui-t6 #yui-main .yui-b {
margin-right:23.620001em;
}

.yui-t7 #yui-main .yui-b {
display:block;
margin:0 0 1em;
}

.yui-gb .yui-u,.yui-g .yui-gb .yui-u,.yui-gb .yui-g,.yui-gb .yui-gb,.yui-gb .yui-gc,.yui-gb .yui-gd,.yui-gb .yui-ge,.yui-gb .yui-gf,.yui-gc .yui-u,.yui-gc .yui-g,.yui-gd .yui-u {
float:left;
width:32%;
margin-left:1.99%;
}

.yui-g .yui-u,.yui-g .yui-g,.yui-g .yui-gb,.yui-g .yui-gc,.yui-g .yui-gd,.yui-g .yui-ge,.yui-g .yui-gf {
width:49.099998%;
}

.yui-gb .yui-u {
margin-left:1.9%;
width:31.9%;
}

.yui-g .yui-gb div.first,.yui-gb .yui-gb div.first {
margin-right:0;
width:32%;
_width:31.700001%;
}

.yui-gb .yui-g div.first {
margin-right:4%;
_margin-right:1.3%;
}

.yui-gb .yui-gc div.first,.yui-gb .yui-gd div.first {
margin-right:0;
}

.yui-gb .yui-gb .yui-u,.yui-gb .yui-gc .yui-u {
margin-left:1.8%;
_margin-left:4%;
}

.yui-g .yui-gb .yui-u {
_margin-left:1%;
}

.yui-gb .yui-gd .yui-u {
width:66%;
_width:61.200001%;
}

.yui-gb .yui-gd div.first {
width:31%;
_width:29.5%;
}

.yui-g .yui-gc .yui-u,.yui-gb .yui-gc .yui-u {
width:32%;
_float:right;
margin-right:0;
_margin-left:0;
}

.yui-gb .yui-gc div.first {
width:66%;
float:left;
margin-left:0;
}

.yui-gb .yui-gb .yui-u {
_margin-left:.7%;
}

.yui-g .yui-gd div.first {
_width:29.9%;
}

.yui-gb .yui-ge .yui-u,.yui-gb .yui-gf div.first {
width:24%;
_width:20%;
}

.yui-gb .yui-ge div.first,.yui-gb .yui-gf .yui-u {
width:73.5%;
_width:65.5%;
}

.yui-ge div.first .yui-gd .yui-u {
width:65%;
}

#bd,.yui-g,.yui-gb,.yui-gc,.yui-gd,.yui-ge,.yui-gf {
zoom:1;
}

#gl_container_fixed { /* if you adjust the width and use the forum plugin, also adjust #gl_container_fixed div.php below */
background:#FFF;
min-width:955px;
width:955px;
margin:20px auto auto;
}

#gl_container_fluid {
background:#FFF;
min-width:955px;
margin:20px;
}

#gl_header {
background:url(layout/nouveau/images/header-bg.png) 0 0 repeat-x;
height:100px;
}

/*gl_moochronometer header images*/
#dawn #gl_header {
  background:url(layout/nouveau/images/header-bg-dawn.jpg) 0 0 repeat-x;
}
#day #gl_header {
  background:url(layout/nouveau/images/header-bg-day.jpg) 0 0 repeat-x;
}
#afternoon #gl_header {
  background:url(layout/nouveau/images/header-bg-afternoon.jpg) 0 0 repeat-x;
}
#dusk #gl_header {
  background:url(layout/nouveau/images/header-bg-dusk.jpg) 0 0 repeat-x;
}
#night #gl_header {
  background:url(layout/nouveau/images/header-bg-night.jpg) 0 0 repeat-x;
}
/*end gl_moochronometer header images*/

#gl_wrapper {
float:left;
margin-top:10px;
width:100%;
}
/* - fix for ie6 wrapping */
* html #gl_wrapper {
width:100%;
overflow:hidden;
}
#gl_content {
background:#FFF;
height:1%;
margin:0 15.79em;
}
#gl_content-full {
background:#FFF;
height:1%;
margin:0 10px;
}
#gl_content-wide-left {
background:#FFF;
height:1%;
margin:0 0.82em 0 15.79em;
}
#gl_content-wide-right {
background:#FFF;
height:1%;
margin:0 15.79em 0 0.82em;
}
#gl_navigation {
background:#F7F7F7;
border:1px solid #CCC;
float:left;
margin-left:-100%;
width:14.80em;
height:1%;
}
#gl_extra {
background:#F7F7F7;
border:1px solid #CCC;
float:left;
margin-left: -14.97em;
width:14.80em;
height:1%;
z-index:10;
}
#gl_footer {
background:#000;
clear:left;
height:40px;
width:100%;
}

glfform.* {
  margin: 0;
  padding: 0;
}

div.glfform form {
  margin: 0;
  padding: 0;
  font-size: 100%;
  min-width: 560px;
}

div.glfform form fieldset {
  clear: both;
  font-size: 100%;
  border-color: #000000;
  border-width: 0 0 0 0 !important;
  border-style: solid none none none !important;
  padding: 10px;
  margin: 0 0 0 0;
}

div.glfform form fieldset legend {
  font-size: 150%;
  font-weight: normal;
  color: #000000;
  margin: 0 0 0 0;
  padding: 0 5px;
}

div.glfform label {
  font-size: 100%;
}

div.glfform label u {
  font-style: normal;
  text-decoration: underline;
}

div.glfform input, div.glfform select, div.glfform textarea {
  font-family: Tahoma, Arial, sans-serif;
  font-size: 100%;
  color: #000000;
}

div.glfform textarea {
  overflow: auto;
}

div.glfform form div {
  clear: left;
  display: block;
/*  width: 354px; */
  height: expression('1%');
  margin: 5px 0 0 0;
  padding: 1px 3px;
}

div.glfform form fieldset div.notes {
  float: right;
  width: 158px;
  height: auto;
  margin: 0 0 10px 10px;
  padding: 5px;
  border: 1px solid #666666;
  background-color: #ffffe1;
  color: #666666;
  font-size: 88%;
}

div.glfform form fieldset div.notes h4 {
  background-image: url(layout/nouveau/images/info.png);
  background-repeat: no-repeat;
  background-position: top left;
  padding: 3px 0 3px 27px;
  border-width: 0 0 1px 0;
  border-style: solid;
  border-color: #666666;
  color: #666666;
  font-size: 110%;
}

div.glfform form fieldset div.notes p {
  margin: 0em 0em 1.2em 0em;
  color: #666666;
}

div.glfform form fieldset div.notes p.last {
  margin: 0em;
}
/* ... */

